Testing micronaut-data update